--- a/frontend.html
+++ b/frontend.html
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light">Istanbul Istanbul</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara,</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -170,7 +170,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qualitest-1.workable.com/j/AB0456B77B'>QualiTest - Jobs: R&D Frontend Developer EL - Apply online</a></h5> 
+<h5><a href='https://qualitest-1.workable.com/j/AB0456B77B'>QualiTest - Jobs: R&D Frontend Developer EL - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -210,7 +210,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -218,7 +218,7 @@ the?...</p>
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317013002'>Job Application for Frontend Architect  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317013002'>Job Application for Frontend Architect  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -290,11 +290,11 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://myndshft.workable.com/j/B5B2B005D8'>Myndshft - Jobs: Senior Front-end Developer - Apply online</a></h5> 
+<h5><a href='https://myndshft.workable.com/j/B5B2B005D8'>Myndshft - Jobs: Senior Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Mesa, Arizona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://career.join.com/jobs/257438-front-end-developer-m-f-x'>Job @ BEAT81 (Berlin): Front-End Developer (m/f/x)  | JOIN</a></h5> 
+<h5><a href='https://career.join.com/jobs/257438-front-end-developer-m-f-x'>Job @ BEAT81 (Berlin): Front-End Developer (m/f/x)  | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -424,7 +424,7 @@ Native) at Self Lender.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://panaseer.workable.com/jobs/487051'>Panaseer - Jobs: Web Front End Engineer - Apply online</a></h5> 
+<h5><a href='https://panaseer.workable.com/jobs/487051'>Panaseer - Jobs: Web Front End Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
@@ -437,7 +437,7 @@ in Munich (published: 18.07.2019). Apply now or check the other available?...</p
 <p><span class="badge badge-light">Singapore Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-goldmansachs.icims.com/jobs/51544/front-end-developer---consumer-technology/job?hub=7'>Careers Center Front End Developer - Consumer Technology in ...</a></h5> 
+<h5><a href='https://uscareers-goldmansachs.icims.com/jobs/51544/front-end-developer---consumer-technology/job?hub=7'>Careers Center Front End Developer - Consumer Technology in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... 0714 000 Y536 0000|Technology Division|CCBD Technology|Consumer 
 Banking Technology|CCBD Technology is now hiring a Front End Developer?...</p>
